23Nov22=======================================================================
1. The BadWord system has been rewritten. This change is pretty radical and
   needs to be used with care as a word that is entered will be reduced to the
   minimum sized string needed to match that word. 

   This is effective a sysop command changeable version of the file badw_regex
   but in a much more sysop friendly form. The (un)set/badword <word>...
   commands now update the /spider/local_data/badword.new file in real time
   without having to mess about with editing files and running load/badword.
   load/badword still works, but you should now never need it.  
19Nov22=======================================================================
1. "Fix" Badword detection in spots and announces etc. 
   NOTE: setting $DXCommandmode::maxbadcount to 0 (default 3) will disable
   autologout on swearing. But any (detected) swearing will be logged.
   User generated swearing will not be propagated, not will incoming 
   protocol. 
2. Fix is_ipaddr so that it accepts more (most?) valid IPV6 addresses that
   actual real IP addresses that might appear as endpoints. 
3. Add CTY-3237 prefixes.
06Jun22=======================================================================
1. Fix show/wcy so that it works even if no wcy broadcasts have been received
   this month. 
01Jun22=======================================================================
1. Fix show/(v)hfstats commands.
2. Add CTY-3221 Prefixes.
07Feb22=======================================================================
1. (re)add set/seeme and show/seeme commands which don't appear to have
   "taken". 
03Feb22=======================================================================
1. Improve/add the help text for grepdbg and watchdbg. 
31Jan22=======================================================================
1. Set $RBN::respottime to 3 minutes. NOTE change of name from 
   $RBN::minspottime.